welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: not found: value c
	setCouleurBrosse(c);
                         ^FlowerPot:17: error: not found: value RED
faireFle(RED);
         ^FlowerPot:19: error: not found: value CYAN
faireFle(CYAN)
         ^FlowerPot:23: error: not found: value ORANGE
faireFle(ORANGE)
         ^FlowerPot:28: error: not found: value GREEN
faireFle(GREEN)
         ^FlowerPot:30: error: not found: value PINK
faireFle(PINK)
         ^